// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Admin Page renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main>
        <div>
          <h1>
            Loading...
          </h1>
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <main>
      <div>
        <h1>
          Loading...
        </h1>
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AuthAdmin Module Renders Correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main>
        <div>
          <h1>
            Loading...
          </h1>
        </div>
      </main>
    </div>
    <div>
      <div>
        <h1>
          Loading...
        </h1>
      </div>
    </div>
    <div>
      <div
        class="text-center flex flex-col items-center"
      >
        <div
          class="mb-[10px]"
        >
          <div
            class="font-bold text-[26px]"
          >
            Symposium Year End File Upload Utility
          </div>
          <div
            class="font-bold text-[18px]"
          >
            Please Upload The Excel File Here
          </div>
        </div>
        <form
          class="flex flex-col items-center"
        >
          <input
            class="block p-2 bg-white text-black rounded-md mb-5"
            id="year"
            name="year"
            placeholder="Year (Default: 2025)"
            type="text"
          />
          <input
            accept=".csv"
            class="hidden"
            id="file"
            name="file"
            type="file"
          />
          <label
            class="button mb-2 text-[20px] cursor-pointer bg-white text-black rounded-md p-2"
            for="file"
          >
            Upload .csv Symposium File
          </label>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="text-center flex flex-col items-center"
    >
      <div
        class="mb-[10px]"
      >
        <div
          class="font-bold text-[26px]"
        >
          Symposium Year End File Upload Utility
        </div>
        <div
          class="font-bold text-[18px]"
        >
          Please Upload The Excel File Here
        </div>
      </div>
      <form
        class="flex flex-col items-center"
      >
        <input
          class="block p-2 bg-white text-black rounded-md mb-5"
          id="year"
          name="year"
          placeholder="Year (Default: 2025)"
          type="text"
        />
        <input
          accept=".csv"
          class="hidden"
          id="file"
          name="file"
          type="file"
        />
        <label
          class="button mb-2 text-[20px] cursor-pointer bg-white text-black rounded-md p-2"
          for="file"
        >
          Upload .csv Symposium File
        </label>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Loading Module Renders Correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main>
        <div>
          <h1>
            Loading...
          </h1>
        </div>
      </main>
    </div>
    <div>
      <div>
        <h1>
          Loading...
        </h1>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <h1>
        Loading...
      </h1>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
